--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3.7'
 services:
   webapigateway:
     image: ${DOCKER_REGISTRY-}webapigateway
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/WebApiGateway/Dockerfile
 
   event.api:
     image: ${DOCKER_REGISTRY-}eventapi
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/Event/Event.Api/Dockerfile
@@ -17,24 +19,37 @@ services:
 
   event.grpc:
     image: ${DOCKER_REGISTRY-}eventgrpc
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/Event/Event.Grpc/Dockerfile
+    depends_on:
+      - mongodb
 
   slip.api:
     image: ${DOCKER_REGISTRY-}slipapi
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/Slip/Slip.Api/Dockerfile
+    depends_on:
+      - rabbitmq
+      - redis
   
   slip.worker:
     image: ${DOCKER_REGISTRY-}slipworker
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/Slip/Slip.Service/Dockerfile
+    depends_on:
+      - rabbitmq
+      - slip.api
+      - postgres
   
   identity.api:
     image: ${DOCKER_REGISTRY-}identityapi
+    restart: unless-stopped
     build:
       context: .
       dockerfile: src/Services/Identity/Identity.Api/Dockerfile
@@ -52,6 +67,7 @@ services:
   
   mongodb:
     image: mongo:latest
+    restart: unless-stopped
     container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
@@ -65,6 +81,7 @@ services:
   
   grafana:
     image: grafana/grafana
+    restart: unless-stopped
     container_name: dev_grafana
     networks:
       - odin
@@ -76,6 +93,7 @@ services:
 
   rabbitmq:
     image: "rabbitmq:3-management"
+    restart: unless-stopped
     container_name: rabbitmq
     ports:
       - "15672:15672"
@@ -87,6 +105,7 @@ services:
   
   sqlserver:
     container_name: mssql
+    restart: unless-stopped
     image: "mcr.microsoft.com/mssql/server:2017-latest"
     volumes:
       - sqlserver-data:/var/opt/mssql/data
@@ -124,7 +143,7 @@ services:
   postgres:
     image: postgres:14.1-alpine
     container_name: postgres
-    restart: always
+    restart: unless-stopped
     networks:
     - odin
     environment:
