--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -10,3 +10,7 @@ scrape_configs:
   - job_name: 'events'
     static_configs:
       - targets: [ 'event.api' ]
+  
+  - job_name: 'identity'
+    static_configs: 
+      - targets: [ 'identity.api' ]
